# setra-cards

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
build_exe/: Desinstalar.bat  Instalar.bat  LEEME.txt  Reset_PIN_Admin.bat  run_app.py  setra-cards.spec
hoteles/: caney-turbo.json  confort-turbo.json  plaza-apartado.json  porton-sabaneta.json  ruisenor.json  torre-primavera.json  vincci-chigorodo.json
src/setra_cards/: __init__.py  main.py
src/setra_cards/cards/: __init__.py  builder.py  crypto.py  reader.py  s70_reader.py  writer.py
src/setra_cards/core/: __init__.py  app_state.py
src/setra_cards/encoder/: __init__.py  driver.py  protocol.py
src/setra_cards/services/: __init__.py  action_log.py  auth.py  card_service.py  encoder_service.py  guests.py  reports.py  rooms.py  staff.py  updater.py
src/setra_cards/storage/: __init__.py  database.py  models.py
src/setra_cards/ui/: __init__.py  theme.py
src/setra_cards/ui/components/: __init__.py  basics.py
src/setra_cards/ui/views/: activity.py  admin.py  cards.py  dashboard.py  guests.py  login.py  placeholder.py  reports.py  rooms.py  shell.py  staff.py
tests/: test_auth.py  test_card_constants.py  test_database.py  test_reports.py  test_rooms.py  test_updater.py
